--- a/faculties.html
+++ b/faculties.html
@@ -236,11 +236,11 @@
     <p>A passionate educator known for guiding students with care and commitment to moral and academic excellence.</p>
     <div class="social-buttons">
       <a href="https://wa.me/7034678818" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/suhail_kerala_?igsh=YmdibmltNmVnYXQ4&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.facebook.com/share/19e17MCsuB/?mibextid=wwXIfr" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
       <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-      <a href="mailto:example1@email.com" class="email"><i class="bi bi-envelope-fill"></i></a>
+      <a href="mailto:suhailp067@gmail.com" class="email"><i class="bi bi-envelope-fill"></i></a>
     </div>
   </div>
 
@@ -248,10 +248,10 @@
     <span class="close-popup">&times;</span>
     <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Firos">
     <h5>FIROS FAIZY AK</h5>
-    <small>TEACHER | 📞 9645134854</small>
+    <small>TEACHER | 📞 9526134854</small>
     <p>Dedicated to fostering a love for learning and nurturing discipline through compassionate teaching.</p>
     <div class="social-buttons">
-      <a href="https://wa.me/9645134854" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+      <a href="https://wa.me/9526134854" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="x"><i class="bi bi-twitter-x"></i></a>
@@ -328,3 +328,4 @@
   </script>
 </body>
 </html>
+
