--- a/idcard.html
+++ b/idcard.html
@@ -4,203 +4,118 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ID Card Generator | Noorussalam Madrasa</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    body {
-      background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
-      font-family: 'Poppins', sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 30px;
+    body { font-family: Poppins, sans-serif; background: #e9f1ff; padding: 20px; }
+    .form-box {
+      max-width: 430px; margin: 40px auto; background: #fff;
+      padding: 25px; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,.1);
     }
-    .id-form {
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-      padding: 30px;
-      width: 100%;
-      max-width: 420px;
-      text-align: center;
-      margin-bottom: 40px;
-      animation: fadeIn 0.8s ease;
-    }
-    .id-form h2 {
-      color: #0b5ed7;
-      font-weight: 700;
-      margin-bottom: 15px;
-    }
-    .id-form p {
-      color: #6c757d;
-      font-size: 14px;
-      margin-bottom: 25px;
-    }
-    .id-form button {
-      background: #0b5ed7;
-      border: none;
-      padding: 10px 0;
-      width: 100%;
-      border-radius: 8px;
-      font-weight: 600;
-      color: #fff;
-      transition: all 0.3s ease;
-    }
-    .id-form button:hover {
-      background: #0849a2;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    /* ID Card Styles */
     .id-card {
-      max-width: 380px;
-      background: white;
-      border-radius: 20px;
-      border: 5px solid #0b5ed7;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-      overflow: hidden;
-      margin-bottom: 20px;
+      width: 360px; margin: 40px auto; background: white;
+      border-radius: 20px; border: 4px solid #0b5ed7;
+      padding-bottom: 20px; text-align: center;
+      box-shadow: 0 5px 25px rgba(0,0,0,.2);
     }
-    .id-header {
-      background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-      color: white;
-      padding: 12px;
-      text-align: center;
+    .id-photo {
+      width: 100px; height: 100px; border-radius: 50%;
+      margin-top: -40px; object-fit: cover;
+      border: 4px solid #fff; box-shadow: 0 0 10px rgba(0,0,0,.3);
     }
-    .id-header h5 { margin:0; font-size:18px; font-weight:700; line-height:1.3; }
-    .id-header small { font-size:12px; display:block; opacity:0.9; }
-    .id-body { padding: 20px; text-align:center; }
-    .id-photo { width:100px; height:100px; border-radius:50%; object-fit:cover; margin-top:-20px; border:4px solid white; box-shadow:0 0 10px rgba(0,0,0,0.3); }
-    .id-body h5 { color:#0b5ed7; margin-top:10px; font-weight:700; }
-    .id-body p { margin:3px 0; color:#333; font-size:14px; }
-    .qr-code { margin-top:10px; }
-    .academic-year { font-weight:600; color:#0b5ed7; margin-top:8px; font-size:15px; letter-spacing:0.5px; }
-    .btns { margin-top:15px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
   </style>
 </head>
+
 <body>
 
-  <!-- Form -->
-  <div class="id-form">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
-    <h2>NOORUSSALAM MADRASA</h2>
-    <p>Enter your Class and Roll Number to generate your ID card</p>
+<div id="page1">
+  <div class="form-box text-center">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80">
+    <h3 class="mt-2">NOORUSSALAM MADRASA</h3>
+    <p class="text-muted">Generate your digital ID Card</p>
+
     <form id="idForm">
-      <div class="mb-3 text-start">
-        <label class="form-label">Class</label>
-        <select name="class" class="form-select" required>
-          <option value="">Select Class</option>
-          <option value="1">Class 1</option>
-          <option value="2">Class 2</option>
-          <option value="3">Class 3</option>
-          <option value="4">Class 4</option>
-          <option value="5">Class 5</option>
-          <option value="6">Class 6</option>
-          <option value="7">Class 7</option>
-          <option value="8">Class 8</option>
-          <option value="9">Class 9</option>
-          <option value="10">Class 10</option>
-        </select>
-      </div>
-      <div class="mb-3 text-start">
-        <label class="form-label">Roll Number</label>
-        <input type="number" name="roll" class="form-control" placeholder="Enter Roll Number" required min="1">
-      </div>
-      <button type="submit">Generate Digital ID Card</button>
+      <label class="form-label text-start">Class</label>
+      <input type="text" class="form-control mb-3" name="class" required>
+
+      <label class="form-label text-start">Roll Number</label>
+      <input type="text" class="form-control mb-3" name="roll" required>
+
+      <button class="btn btn-primary w-100">Generate ID Card</button>
     </form>
   </div>
+</div>
 
-  <!-- ID Card Container -->
-  <div id="idCardContainer"></div>
+<div id="page2" style="display:none;">
+  <h3 class="text-center mb-4">Digital ID Card</h3>
+  <div id="cardContainer" class="text-center">Loading...</div>
+</div>
 
-  <!-- Libraries for PDF -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script>
+const scriptURL = "https://script.google.com/macros/s/AKfycbwINRsXsJEAI1jPEZqXfk-ZPUqZJ-HnC6HF22V3ugJuSYgA2nVf4LC_sAIfZbPvv0gP/exec";
 
-  <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwINRsXsJEAI1jPEZqXfk-ZPUqZJ-HnC6HF22V3ugJuSYgA2nVf4LC_sAIfZbPvv0gP/exec';
+// Detect if page is "ID card view"
+const params = new URLSearchParams(window.location.search);
+const classVal = params.get("class");
+const rollVal = params.get("roll");
 
-    document.getElementById('idForm').addEventListener('submit', async e => {
-      e.preventDefault();
+// ------------ PAGE 1 (Form Page) -------------
+if (!classVal && !rollVal) {
+  document.getElementById("page1").style.display = "block";
+  document.getElementById("page2").style.display = "none";
 
-      const formData = new FormData(e.target);
-      const classVal = formData.get('class');
-      const rollVal = formData.get('roll');
+  document.getElementById("idForm").addEventListener("submit", function(e){
+    e.preventDefault();
+    let cls = e.target.class.value;
+    let roll = e.target.roll.value;
 
-      if (!classVal || !rollVal) return alert('Please select class and enter roll number.');
+    // Open same HTML file in new tab with parameters
+    window.open(`${location.pathname}?class=${cls}&roll=${roll}`, "_blank");
+  });
+}
 
-      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
-      const container = document.getElementById('idCardContainer');
-      
-      // Loading spinner
-      container.style.display = 'block';
-      container.innerHTML = `
-        <div class="text-center my-5">
-          <div class="spinner-border text-primary" role="status"></div>
-          <p>Loading ID Card...</p>
+// ------------ PAGE 2 (ID Card Page) -----------
+if (classVal && rollVal) {
+  document.getElementById("page1").style.display = "none";
+  document.getElementById("page2").style.display = "block";
+
+  fetch(`${scriptURL}?class=${classVal}&roll=${rollVal}`)
+    .then(res => res.json())
+    .then(data => {
+      if (data.result !== "success") {
+        document.getElementById("cardContainer").innerHTML =
+          `<h3 style="color:red">${data.message}</h3>`;
+        return;
+      }
+
+      const s = data.student;
+      const qrData = `UID:${s.UID},Name:${s.FullName}`;
+      const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
+
+      document.getElementById("cardContainer").innerHTML = `
+        <div class="id-card">
+          <div style="background:#0b5ed7;color:white;padding:10px;border-radius:17px 17px 0 0;">
+            <h5 class="m-0">NOORUSSALAM SECONDARY MADRASA</h5>
+            <small>Kambippalam Kerala Estate</small>
+          </div>
+
+          <img src="${s.PhotoURL}" class="id-photo">
+
+          <h4 style="color:#0b5ed7;">${s.FullName}</h4>
+          <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+          <p><b>Father:</b> ${s.FatherName}</p>
+          <p><b>Class:</b> ${s.ClassLevel}</p>
+          <p><b>Roll No:</b> ${s.RollNumber}</p>
+          <p><b>Phone:</b> ${s.Phone}</p>
+
+          <img src="${qrURL}" width="100" class="mt-2">
+          <p class="mt-2"><b>Academic Year:</b> 2025–26</p>
         </div>
       `;
-
-      try {
-        const res = await fetch(url);
-        const data = await res.json();
-
-        if (data.result !== 'success') {
-          container.innerHTML = `<h3 style="color:red;text-align:center;">${data.message}</h3>`;
-          return;
-        }
-
-        const s = data.student;
-        const qrData = `UID: ${s.UID}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
-        const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=150x150`;
-
-        container.innerHTML = `
-          <div class="id-card mx-auto p-3" id="idCard">
-            <div class="id-header">
-              <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-              <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
-              <small>Under SKIMVB, Reg No:6110</small>
-            </div>
-            <div class="id-body">
-              <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
-              <h5>${s.FullName}</h5>
-              <p><strong>UID:</strong> ${s.UID}</p>
-              <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
-              <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
-              <p><strong>Class:</strong> ${s.ClassLevel}</p>
-              <p><strong>Roll No:</strong> ${s.RollNumber}</p>
-              <p><strong>Phone:</strong> ${s.Phone}</p>
-              <div class="qr-code my-2">
-                <img src="${qrURL}" alt="QR Code">
-                <p class="academic-year">Academic Year: 2025–26</p>
-              </div>
-              <div class="btns">
-                <button id="printBtn" class="btn btn-primary btn-sm">Print</button>
-                <button id="downloadBtn" class="btn btn-success btn-sm">Download PDF</button>
-              </div>
-            </div>
-          </div>
-        `;
-
-        const { jsPDF } = window.jspdf;
-        document.getElementById('printBtn').addEventListener('click', () => window.print());
-        document.getElementById('downloadBtn').addEventListener('click', () => {
-          html2canvas(document.getElementById('idCard')).then(canvas => {
-            const imgData = canvas.toDataURL('image/png');
-            const pdf = new jsPDF({ orientation:'portrait', unit:'px', format:[canvas.width, canvas.height] });
-            pdf.addImage(imgData, 'PNG', 0, 0, canvas.width, canvas.height);
-            pdf.save(`${s.FullName}_ID_Card.pdf`);
-          });
-        });
-
-      } catch(err) {
-        container.innerHTML = `<h3 style="color:red;text-align:center;">Error fetching data.</h3>`;
-        console.error(err);
-      }
     });
-  </script>
+}
+</script>
+
 </body>
 </html>
