--- a/idcard.html
+++ b/idcard.html
@@ -8,114 +8,230 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
-    body { font-family: Poppins, sans-serif; background: #e9f1ff; padding: 20px; }
-    .form-box {
-      max-width: 430px; margin: 40px auto; background: #fff;
-      padding: 25px; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,.1);
+    body {
+      background: linear-gradient(140deg, #0b5ed7 0%, #5fa8ff 50%, #a8d4ff 100%);
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 30px;
     }
-    .id-card {
-      width: 360px; margin: 40px auto; background: white;
-      border-radius: 20px; border: 4px solid #0b5ed7;
-      padding-bottom: 20px; text-align: center;
-      box-shadow: 0 5px 25px rgba(0,0,0,.2);
+
+    .id-form {
+      background: #ffffffdd;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+      padding: 35px;
+      width: 100%;
+      max-width: 420px;
+      text-align: center;
+      animation: fadeIn 0.8s ease;
+      backdrop-filter: blur(5px);
     }
-    .id-photo {
-      width: 100px; height: 100px; border-radius: 50%;
-      margin-top: -40px; object-fit: cover;
-      border: 4px solid #fff; box-shadow: 0 0 10px rgba(0,0,0,.3);
+
+    .id-form h2 {
+      color: #0b5ed7;
+      font-weight: 700;
+      margin-bottom: 10px;
+      text-transform: uppercase;
+    }
+
+    .id-form p {
+      color: #555;
+      font-size: 14px;
+      margin-bottom: 25px;
+    }
+
+    .form-control {
+      border-radius: 10px;
+      height: 48px;
+      border: 2px solid #dce7ff;
+      font-size: 15px;
+    }
+
+    .form-control:focus {
+      border-color: #0b5ed7;
+      box-shadow: 0 0 8px rgba(11, 94, 215, 0.4);
+    }
+
+    .id-form button {
+      background: linear-gradient(90deg, #0b5ed7, #167bff);
+      border: none;
+      padding: 12px 0;
+      width: 100%;
+      border-radius: 10px;
+      font-weight: 600;
+      color: #fff;
+      font-size: 16px;
+      letter-spacing: 0.5px;
+      transition: 0.3s;
+      box-shadow: 0 6px 20px rgba(11, 94, 215, 0.4);
+    }
+
+    .id-form button:hover {
+      background: #084bad;
+      transform: translateY(-2px);
+      box-shadow: 0 10px 22px rgba(0,0,0,0.35);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 
 <body>
 
-<div id="page1">
-  <div class="form-box text-center">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80">
-    <h3 class="mt-2">NOORUSSALAM MADRASA</h3>
-    <p class="text-muted">Generate your digital ID Card</p>
+  <!-- Form UI -->
+  <div class="id-form">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="85" alt="logo">
+    <h2>NOORUSSALAM MADRASA</h2>
+    <p>Enter your Class and Roll Number to generate your ID card</p>
 
     <form id="idForm">
-      <label class="form-label text-start">Class</label>
-      <input type="text" class="form-control mb-3" name="class" required>
+      <div class="mb-3 text-start">
+        <label class="form-label">Class</label>
+        <input type="text" name="class" class="form-control" placeholder="Eg: 4, 5A, 7B..." required>
+      </div>
 
-      <label class="form-label text-start">Roll Number</label>
-      <input type="text" class="form-control mb-3" name="roll" required>
+      <div class="mb-3 text-start">
+        <label class="form-label">Roll Number</label>
+        <input type="text" name="roll" class="form-control" placeholder="Eg: 12" required>
+      </div>
 
-      <button class="btn btn-primary w-100">Generate ID Card</button>
+      <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
-</div>
 
-<div id="page2" style="display:none;">
-  <h3 class="text-center mb-4">Digital ID Card</h3>
-  <div id="cardContainer" class="text-center">Loading...</div>
-</div>
 
-<script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbwINRsXsJEAI1jPEZqXfk-ZPUqZJ-HnC6HF22V3ugJuSYgA2nVf4LC_sAIfZbPvv0gP/exec";
+  <!-- Script -->
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
-// Detect if page is "ID card view"
-const params = new URLSearchParams(window.location.search);
-const classVal = params.get("class");
-const rollVal = params.get("roll");
+    document.getElementById('idForm').addEventListener('submit', e => {
+      e.preventDefault();
 
-// ------------ PAGE 1 (Form Page) -------------
-if (!classVal && !rollVal) {
-  document.getElementById("page1").style.display = "block";
-  document.getElementById("page2").style.display = "none";
+      const formData = new FormData(e.target);
+      const classVal = formData.get('class');
+      const rollVal = formData.get('roll');
 
-  document.getElementById("idForm").addEventListener("submit", function(e){
-    e.preventDefault();
-    let cls = e.target.class.value;
-    let roll = e.target.roll.value;
+      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-    // Open same HTML file in new tab with parameters
-    window.open(`${location.pathname}?class=${cls}&roll=${roll}`, "_blank");
-  });
-}
+      const newWin = window.open("", "_blank");
+      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;margin-top:40px;'>Loading ID Card...</h3>");
 
-// ------------ PAGE 2 (ID Card Page) -----------
-if (classVal && rollVal) {
-  document.getElementById("page1").style.display = "none";
-  document.getElementById("page2").style.display = "block";
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
 
-  fetch(`${scriptURL}?class=${classVal}&roll=${rollVal}`)
-    .then(res => res.json())
-    .then(data => {
-      if (data.result !== "success") {
-        document.getElementById("cardContainer").innerHTML =
-          `<h3 style="color:red">${data.message}</h3>`;
-        return;
-      }
+          if (data.result === 'success') {
+            const s = data.student;
 
-      const s = data.student;
-      const qrData = `UID:${s.UID},Name:${s.FullName}`;
-      const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
+            const qrData = `UID:${s.UID},ADM:${s.AdmissionNumber},Name:${s.FullName}`;
+            const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=120x120`;
 
-      document.getElementById("cardContainer").innerHTML = `
-        <div class="id-card">
-          <div style="background:#0b5ed7;color:white;padding:10px;border-radius:17px 17px 0 0;">
-            <h5 class="m-0">NOORUSSALAM SECONDARY MADRASA</h5>
-            <small>Kambippalam Kerala Estate</small>
-          </div>
+            const html = `
+              <html>
+              <head>
+                <title>${s.FullName} | ID Card</title>
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-          <img src="${s.PhotoURL}" class="id-photo">
+                <style>
+                  body {
+                    background: #eef4ff;
+                    font-family: Poppins;
+                    padding-top: 30px;
+                    text-align: center;
+                  }
 
-          <h4 style="color:#0b5ed7;">${s.FullName}</h4>
-          <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
-          <p><b>Father:</b> ${s.FatherName}</p>
-          <p><b>Class:</b> ${s.ClassLevel}</p>
-          <p><b>Roll No:</b> ${s.RollNumber}</p>
-          <p><b>Phone:</b> ${s.Phone}</p>
+                  .id-card {
+                    width: 380px;
+                    margin: auto;
+                    background: white;
+                    border-radius: 20px;
+                    box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+                    overflow: hidden;
+                    border: 5px solid #0b5ed7;
+                  }
 
-          <img src="${qrURL}" width="100" class="mt-2">
-          <p class="mt-2"><b>Academic Year:</b> 2025–26</p>
-        </div>
-      `;
+                  .header {
+                    background: linear-gradient(90deg, #0b5ed7, #5fa8ff);
+                    padding: 15px;
+                    color: white;
+                  }
+
+                  .photo {
+                    width: 110px;
+                    height: 110px;
+                    border-radius: 50%;
+                    margin-top: -40px;
+                    border: 4px solid white;
+                    object-fit: cover;
+                    box-shadow: 0 0 12px rgba(0,0,0,0.35);
+                  }
+
+                  .back-btn {
+                    margin-top: 25px;
+                    background: #0b5ed7;
+                    color: white;
+                    padding: 10px 20px;
+                    border-radius: 8px;
+                    text-decoration: none;
+                    font-weight: 600;
+                    display: inline-block;
+                    box-shadow: 0 6px 18px rgba(11,94,215,0.4);
+                  }
+
+                  .back-btn:hover {
+                    background: #084bad;
+                  }
+                </style>
+              </head>
+
+              <body>
+
+                <div class="id-card">
+                  <div class="header">
+                    <h4>NOORUSSALAM SECONDARY MADRASA</h4>
+                    <small>Kambippalam Kerala Estate, Malappuram</small>
+                  </div>
+
+                  <img src="${s.PhotoURL}" class="photo">
+
+                  <h4 style="color:#0b5ed7;margin-top:10px;">${s.FullName}</h4>
+
+                  <p><b>UID:</b> ${s.UID}</p>
+                  <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+                  <p><b>Father:</b> ${s.FatherName}</p>
+                  <p><b>Class:</b> ${s.ClassLevel}</p>
+                  <p><b>Roll No:</b> ${s.RollNumber}</p>
+                  <p><b>Phone:</b> ${s.Phone}</p>
+
+                  <img src="${qrURL}" style="width:120px;margin-top:10px;">
+                  <p style="color:#0b5ed7;font-weight:600;">Academic Year: 2025–26</p>
+                </div>
+
+                <a href="${location.href}" class="back-btn">← Back to Home</a>
+
+              </body>
+              </html>
+            `;
+
+            newWin.document.open();
+            newWin.document.write(html);
+            newWin.document.close();
+
+          } else {
+            newWin.document.write(`<h3 style='color:red;text-align:center;margin-top:40px;'>${data.message}</h3>`);
+          }
+        })
+        .catch(() => {
+          newWin.document.write("<h3 style='color:red;text-align:center;margin-top:40px;'>Error fetching data.</h3>");
+        });
     });
-}
-</script>
+  </script>
 
 </body>
 </html>
