--- a/idcard.html
+++ b/idcard.html
@@ -5,233 +5,233 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ID Card Generator | Noorussalam Madrasa</title>
 
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Google Font (New Premium Look) -->
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     body {
-      background: linear-gradient(140deg, #0b5ed7 0%, #5fa8ff 50%, #a8d4ff 100%);
-      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
+      font-family: 'Quicksand', sans-serif;
       min-height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 30px;
     }
-
     .id-form {
-      background: #ffffffdd;
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.25);
-      padding: 35px;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+      padding: 30px;
       width: 100%;
       max-width: 420px;
       text-align: center;
+      margin-bottom: 40px;
       animation: fadeIn 0.8s ease;
-      backdrop-filter: blur(5px);
     }
-
     .id-form h2 {
       color: #0b5ed7;
       font-weight: 700;
-      margin-bottom: 10px;
-      text-transform: uppercase;
+      margin-bottom: 15px;
     }
-
     .id-form p {
-      color: #555;
+      color: #6c757d;
       font-size: 14px;
       margin-bottom: 25px;
     }
-
-    .form-control {
-      border-radius: 10px;
-      height: 48px;
-      border: 2px solid #dce7ff;
-      font-size: 15px;
-    }
-
-    .form-control:focus {
-      border-color: #0b5ed7;
-      box-shadow: 0 0 8px rgba(11, 94, 215, 0.4);
-    }
-
     .id-form button {
-      background: linear-gradient(90deg, #0b5ed7, #167bff);
+      background: #0b5ed7;
       border: none;
-      padding: 12px 0;
+      padding: 10px 0;
       width: 100%;
-      border-radius: 10px;
+      border-radius: 8px;
       font-weight: 600;
       color: #fff;
-      font-size: 16px;
-      letter-spacing: 0.5px;
-      transition: 0.3s;
-      box-shadow: 0 6px 20px rgba(11, 94, 215, 0.4);
+      transition: all 0.3s ease;
     }
-
     .id-form button:hover {
-      background: #084bad;
-      transform: translateY(-2px);
-      box-shadow: 0 10px 22px rgba(0,0,0,0.35);
+      background: #0849a2;
     }
-
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+      from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
-
 <body>
 
-  <!-- Form UI -->
   <div class="id-form">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="85" alt="logo">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
     <h2>NOORUSSALAM MADRASA</h2>
     <p>Enter your Class and Roll Number to generate your ID card</p>
 
     <form id="idForm">
       <div class="mb-3 text-start">
         <label class="form-label">Class</label>
-        <input type="text" name="class" class="form-control" placeholder="Eg: 4, 5A, 7B..." required>
+        <input type="text" name="class" class="form-control" placeholder="Enter Class" required>
       </div>
 
       <div class="mb-3 text-start">
         <label class="form-label">Roll Number</label>
-        <input type="text" name="roll" class="form-control" placeholder="Eg: 12" required>
+        <input type="text" name="roll" class="form-control" placeholder="Enter Roll Number" required>
       </div>
 
       <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
 
+<script>
+const scriptURL =
+  'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
-  <!-- Script -->
-  <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
+document.getElementById("idForm").addEventListener("submit", e => {
+  e.preventDefault();
 
-    document.getElementById('idForm').addEventListener('submit', e => {
-      e.preventDefault();
+  const formData = new FormData(e.target);
+  const classVal = formData.get("class");
+  const rollVal = formData.get("roll");
 
-      const formData = new FormData(e.target);
-      const classVal = formData.get('class');
-      const rollVal = formData.get('roll');
+  const url = `${scriptURL}?class=${classVal}&roll=${rollVal}`;
+  const newWin = window.open("", "_blank");
+  newWin.document.write("<h3 style='text-align:center;font-family:Quicksand;color:#0b5ed7;'>Loading ID Card...</h3>");
 
-      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
+  fetch(url)
+    .then(res => res.json())
+    .then(data => {
+      if (data.result === "success") {
+        const s = data.student;
+        const qrData = `UID: ${s.UID}, Admission: ${s.AdmissionNumber}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
+        const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
 
-      const newWin = window.open("", "_blank");
-      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;margin-top:40px;'>Loading ID Card...</h3>");
+        const html = `
+        <html>
+        <head>
+          <title>${s.FullName} - ID Card</title>
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+          <style>
+            body {
+              background: #eef3ff;
+              font-family: 'Quicksand', sans-serif;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              padding: 30px;
+            }
+            .id-card {
+              width: 380px;
+              background: white;
+              border-radius: 20px;
+              box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+              overflow: hidden;
+              text-align: center;
+              border: 4px solid #0b5ed7;
+            }
+            .id-header {
+              background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+              color: white;
+              padding: 12px;
+            }
+            .id-header h5 {
+              margin: 0;
+              font-size: 18px;
+              font-weight: 700;
+            }
+            .id-header small {
+              font-size: 12px;
+              display: block;
+              opacity: 0.9;
+            }
+            .id-body {
+              padding: 20px;
+            }
+            .id-photo {
+              width: 100px;
+              height: 100px;
+              border-radius: 50%;
+              object-fit: cover;
+              margin-top: -20px;
+              border: 4px solid white;
+              box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            }
+            .name {
+              color: #0b5ed7;
+              margin-top: 10px;
+              font-size: 20px;
+              font-weight: 700;
+            }
+            p {
+              margin: 2px 0;
+              font-size: 14px;
+              color: #333;
+            }
+            .qr { margin-top: 10px; }
+            .academic { 
+              font-weight: 600; 
+              color: #0b5ed7; 
+              margin-top: 8px;
+            }
+            .btn-print, .btn-home {
+              margin-top: 20px;
+              width: 200px;
+              border-radius: 30px;
+              padding: 10px;
+              font-weight: 600;
+            }
+            .btn-home {
+              background:#0b5ed7;color:white;
+            }
+          </style>
+        </head>
+        <body>
 
-      fetch(url)
-        .then(res => res.json())
-        .then(data => {
+          <div class="id-card">
+            <div class="id-header">
+              <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+              <small>Kambippalam Kerala Estate</small>
+              <small>Under SKIMVB | Reg No: 6110</small>
+            </div>
 
-          if (data.result === 'success') {
-            const s = data.student;
+            <div class="id-body">
+              <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
+              <div class="name">${s.FullName}</div>
 
-            const qrData = `UID:${s.UID},ADM:${s.AdmissionNumber},Name:${s.FullName}`;
-            const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=120x120`;
+              <p><b>UID:</b> ${s.UID}</p>
+              <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+              <p><b>Father’s Name:</b> ${s.FatherName}</p>
+              <p><b>Class:</b> ${s.ClassLevel}</p>
+              <p><b>Roll No:</b> ${s.RollNumber}</p>
+              <p><b>Phone:</b> ${s.Phone}</p>
 
-            const html = `
-              <html>
-              <head>
-                <title>${s.FullName} | ID Card</title>
-                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+              <div class="qr">
+                <img src="${qrURL}">
+                <p class="academic">Academic Year: 2025–26</p>
+              </div>
+            </div>
+          </div>
 
-                <style>
-                  body {
-                    background: #eef4ff;
-                    font-family: Poppins;
-                    padding-top: 30px;
-                    text-align: center;
-                  }
+          <button onclick="window.print()" class="btn btn-outline-primary btn-print">
+            Print ID Card
+          </button>
 
-                  .id-card {
-                    width: 380px;
-                    margin: auto;
-                    background: white;
-                    border-radius: 20px;
-                    box-shadow: 0 10px 30px rgba(0,0,0,0.25);
-                    overflow: hidden;
-                    border: 5px solid #0b5ed7;
-                  }
+          <a href="index.html">
+            <button class="btn btn-home">Back to Home</button>
+          </a>
 
-                  .header {
-                    background: linear-gradient(90deg, #0b5ed7, #5fa8ff);
-                    padding: 15px;
-                    color: white;
-                  }
+        </body>
+        </html>`;
 
-                  .photo {
-                    width: 110px;
-                    height: 110px;
-                    border-radius: 50%;
-                    margin-top: -40px;
-                    border: 4px solid white;
-                    object-fit: cover;
-                    box-shadow: 0 0 12px rgba(0,0,0,0.35);
-                  }
-
-                  .back-btn {
-                    margin-top: 25px;
-                    background: #0b5ed7;
-                    color: white;
-                    padding: 10px 20px;
-                    border-radius: 8px;
-                    text-decoration: none;
-                    font-weight: 600;
-                    display: inline-block;
-                    box-shadow: 0 6px 18px rgba(11,94,215,0.4);
-                  }
-
-                  .back-btn:hover {
-                    background: #084bad;
-                  }
-                </style>
-              </head>
-
-              <body>
-
-                <div class="id-card">
-                  <div class="header">
-                    <h4>NOORUSSALAM SECONDARY MADRASA</h4>
-                    <small>Kambippalam Kerala Estate, Malappuram</small>
-                  </div>
-
-                  <img src="${s.PhotoURL}" class="photo">
-
-                  <h4 style="color:#0b5ed7;margin-top:10px;">${s.FullName}</h4>
-
-                  <p><b>UID:</b> ${s.UID}</p>
-                  <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
-                  <p><b>Father:</b> ${s.FatherName}</p>
-                  <p><b>Class:</b> ${s.ClassLevel}</p>
-                  <p><b>Roll No:</b> ${s.RollNumber}</p>
-                  <p><b>Phone:</b> ${s.Phone}</p>
-
-                  <img src="${qrURL}" style="width:120px;margin-top:10px;">
-                  <p style="color:#0b5ed7;font-weight:600;">Academic Year: 2025–26</p>
-                </div>
-
-                <a href="${location.href}" class="back-btn">← Back to Home</a>
-
-              </body>
-              </html>
-            `;
-
-            newWin.document.open();
-            newWin.document.write(html);
-            newWin.document.close();
-
-          } else {
-            newWin.document.write(`<h3 style='color:red;text-align:center;margin-top:40px;'>${data.message}</h3>`);
-          }
-        })
-        .catch(() => {
-          newWin.document.write("<h3 style='color:red;text-align:center;margin-top:40px;'>Error fetching data.</h3>");
-        });
+        newWin.document.open();
+        newWin.document.write(html);
+        newWin.document.close();
+      }
     });
-  </script>
+});
+</script>
 
 </body>
 </html>
